Обновления по новым требованиям!
