# docs/swagger.yaml
@@ -12,6 +12,8 @@ definitions:
         type: string
       start_date:
         type: string
+      user_id:
+        type: string
     type: object
 host: localhost:8080
 info:
@@ -20,39 +22,11 @@ info:
   title: Subscription Aggregator API
   version: "1.0"
 paths:
-  /subscriptions:
-    post:
-      consumes:
-      - application/json
-      description: Создает новую подписку
-      parameters:
-      - description: Данные подписки
-        in: body
-        name: subscription
-        required: true
-        schema:
-          $ref: '#/definitions/model.Subscription'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/model.Subscription'
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Создание подписки
-      tags:
-      - Подписки
   /subscriptions/{id}:
     delete:
       description: Удаляет подписку по ID
       parameters:
-      - description: ID пользователя
+      - description: ID подписки
         in: path
         name: id
         required: true
@@ -90,8 +64,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Subscription'
-        "404":
-          description: Not Found
+        "500":
+          description: Internal Server Error
           schema:
             additionalProperties:
               type: string
@@ -109,12 +83,26 @@ paths:
         name: id
         required: true
         type: string
-      - description: Обновленные данные
-        in: body
-        name: subscription
-        required: true
-        schema:
-          $ref: '#/definitions/model.Subscription'
+      - description: Новый ID пользователя
+        in: query
+        name: user_id
+        type: string
+      - description: Новое название сервиса
+        in: query
+        name: service_name
+        type: string
+      - description: Новая стоимость подписки
+        in: query
+        name: price
+        type: integer
+      - description: Новая начальная дата (yyyy-mm-dd)
+        in: query
+        name: from
+        type: string
+      - description: Новая конечная дата (yyyy-mm-dd)
+        in: query
+        name: to
+        type: string
       produces:
       - application/json
       responses:
@@ -133,17 +121,70 @@ paths:
       summary: Обновление подписки
       tags:
       - Подписки
-  /subscriptions/{id}/list/:
+  /subscriptions/{user_id}:
+    post:
+      description: Создает новую подписку
+      parameters:
+      - description: ID пользователя
+        in: path
+        name: user_id
+        required: true
+        type: string
+      - description: Название сервиса
+        in: query
+        name: service_name
+        required: true
+        type: string
+      - description: Стоимость подписки
+        in: query
+        name: price
+        required: true
+        type: integer
+      - description: Начальная дата (yyyy-mm-dd)
+        in: query
+        name: from
+        required: true
+        type: string
+      - description: Конечная дата (yyyy-mm-dd)
+        in: query
+        name: to
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Subscription'
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Создание подписки
+      tags:
+      - Подписки
+  /subscriptions/{user_id}/list/:
     post:
       consumes:
       - application/json
       description: Получение списка подписок по фильтру НИКНЕЙМ ПОЛЬЗОВАТЕЛЯ
       parameters:
-      - description: id
+      - description: user_id
         in: path
-        name: id
+        name: user_id
         required: true
         type: string
+      - description: page
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: page_size
+        in: query
+        name: page_size
+        type: integer
       produces:
       - application/json
       responses:
@@ -162,13 +203,13 @@ paths:
       summary: Список подписок
       tags:
       - Подписки
-  /subscriptions/user/{id}/total:
+  /subscriptions/user/{user_id}/total:
     get:
       description: Подсчет общей суммы расходов по подпискам пользователя за период
       parameters:
       - description: ID пользователя
         in: path
-        name: id
+        name: user_id
         required: true
         type: string
       - description: Название сервиса
